remove spacing element that no longer provides space

--- a/src/styles/_stamp.scss
+++ b/src/styles/_stamp.scss
@@ -15,10 +15,6 @@ $block-class: 'stamp';
             padding-top: 100%;
         }
 
-        &__spacer {
-            //height: 0.5em;
-        }
-
         &__content {
             display: flex;
             flex-direction: column;
